testsuite/poke.pkl/mul-diag-3.pk
/* { dg-do compile } */

var s = 3#B
        * [1,2,3]; /* { dg-error "invalid operand.*\n.*expected integral" } */
